Bug 485013 - jsdate.cpp AdjustTime() breaks London (GMT+0) dates when DST activates Mar 29 2009 Summary: jsdate.cpp AdjustTime() breaks London (GMT+0) dates when DST activates Mar 29. r=mrbkap